tests/paczka2/big_fuzzy/57384894.err
Error in line 1: yCzui1IXZ1Z S384 93,8
Error in line 18: yCzui1IXZ1Z S384 57,9
Error in line 21: ttM72rmSqpE S126 77,5
Error in line 32: ED8nLaite0 S384 98,8
Error in line 42: hXX6WHHZU91 A734 6,3
Error in line 51: S611 S126 87,8
Error in line 57: tbm8H0 S611 77,5
Error in line 62: tbm8H0 S384 39,6
Error in line 70: tbm8H0 S126 58,2
Error in line 75: ttM72rmSqpE S384 19,0
Error in line 65: yCzui1IXZ1Z S384 47,3
Error in line 84: yCzui1IXZ1Z S126 20,8
Error in line 74: tbm8H0 S384 42,3
Error in line 113: yCzui1IXZ1Z S384 92,7
Error in line 105: ttM72rmSqpE S126 98,1
Error in line 112: tbm8H0 S126 56,4
Error in line 114: ED8nLaite0 S384 97,1
Error in line 132: ED8nLaite0 S126 44,0
Error in line 139: Hmia5b S126 1,0
Error in line 141: yCzui1IXZ1Z S126 89,9
Error in line 154: ED8nLaite0 S384 19,2
Error in line 158: S611 S611 57,0
Error in line 166: tbm8H0 S611 67,97
Error in line 164: S611 A734 91,7
Error in line 171: yCzui1IXZ1Z S611 11,8
Error in line 181: ED8nLaite0 S384 1,61
Error in line 196: ttM72rmSqpE S126 77,7
Error in line 195: ED8nLaite0 S384 44,8
Error in line 198: ttM72rmSqpE S611 37,2
Error in line 180: yCzui1IXZ1Z S384 82,1
Error in line 216: Hmia5b A734 96,7
Error in line 213: yCzui1IXZ1Z S384 14,2
Error in line 222: tbm8H0 S{11 78,4
Error in line 217: ttM72rmSqpE A734 48,7
Error in line 235: ED8nLaite0 S384 44,4
Error in line 238: ED8nLaite0 S126 85,0
Error in line 231: ttM72rmSqpE S126 14,1
Error in line 244: ttM72rmSqpE S611 68,9
